# Agent-Stream

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup_mac.py
agentstream/: __init__.py  __main__.py  app.py  events.py  parsers.py  streams.py  theme.py  toolbar.py
macos/: AgentStream.py  create_icon.py
tests/: test_parsers.py  test_streams.py  test_toolbar.py
